# python-project-52

./: .codeclimate.yml  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django-test.yml  flake8.yml
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/static/: toggler.js
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_status.py  0002_alter_task_options.py  0002_initial.py
task_manager/templates/: 404.html  base.html  delete.html  form.html  index.html  login.html  sign.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_list.html
task_manager/templates/layout/: default.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_list.html
task_manager/templates/tasks/: task.html  task_create.html  task_delete.html  task_update.html  tasks_list.html
task_manager/templates/users/: registration.html  user_create.html  user_delete.html  (+3 more)
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+6 files in other folders)
